--- a/CCS/mattress_zombie.css
+++ b/CCS/mattress_zombie.css
@@ -700,18 +700,19 @@ li {
 				width: 30%;
 				padding: 5px;
 				text-align: right;
+                                line-height: 1em;
 			}
 		
 			.mattressscore {
 				float: left;
-                                width: 60%;
+                                width: 55%;
 				padding: 5px;
                                 white-space: nowrap;
 			}
 			
 			.mattressscorebar {
 				float: left;
-				height: 22px;
+				height: 1em;
 				background-color: #669933;
 				/*background-color: #000000;*/
 				border: 1px solid #000000;
@@ -719,7 +720,7 @@ li {
 			
 			.mattressscoretick {
 				float: left;
-				width: 420px;
+				width: 55%;
 				text-align: center;
 				font-size: 12px;
 				color: #999999;
